--- a/about.html
+++ b/about.html
@@ -11,63 +11,73 @@
     <link rel="stylesheet" href="./font/bootstrap-icons.css">
 </head>
 <body>
-    <header class="fixed-top header">
-        <div class="d-flex flex-row-reverse bd-highlight mb-3">
-            <div class="header_top d-flex flex-row">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0 d-flex flex-row">
-                    <li class="nav-item">
-                        <i class="bi bi-envelope-fill"></i>
+    <header class=" container-fluid fixed-top justify-content-between align-items-center header">
+        <div class="d-flex flex-row-reverse bd-highlight">
+            <div class="header_top d-flex flex-row flex-grow-1 justify-content-center align-items-center">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0 d-flex flex-row ">
+                    <li class="nav-item d-none d-lg-block">
+                        <a href="https://mail.google.com/" class="nav_redes_sociales" target="_blank" rel="noopener noreferrer">
+                            <i class="bi bi-envelope-fill header_top_nav"></i>
+                        </a>
+                    </li>
+                    <li class="nav-item d-none d-lg-block">
+                        <a href="https://www.google.com/maps/" class="nav_redes_sociales" target="_blank" rel="noopener noreferrer">
+                            <i class="bi bi-geo-alt-fill header_top_nav"></i>
+                        </a>
+                    </li>
+                    <li class="nav-item  d-none d-lg-block">
+                        <a href="https://web.whatsapp.com/" class="nav_redes_sociales" target="_blank" rel="noopener noreferrer">
+                            <i class="bi bi-telephone-fill header_top_nav"></i>
+                        </a>
                     </li>
                     <li class="nav-item">
-                        <i class="bi bi-geo-alt-fill"></i>
+                        <a href="#" class="nav_redes_sociales" target="_blank" rel="noopener noreferrer">
+                            <i class="bi bi-search header_top_nav"></i>
+                        </a>
                     </li>
                     <li class="nav-item">
-                        <i class="bi bi-telephone-fill"></i>
-                    </li>
-                    <li class="nav-item">
-                        <i class="bi bi-zoom-out"></i>
-                    </li>
-                    <li class="nav-item">
-                        <i class="bi bi-cart"></i>
+                        <a class="nav_redes_sociales" href="#" target="_blank" rel="noopener noreferrer">
+                            <i class="bi bi-cart header_top_nav"></i>
+                        </a>
                     </li>
                 </ul> 
             </div>
-            <nav class="navbar navbar-expand-lg navbar-light bg-lightp">
-                <div class="container-fluid">
+            <nav class="navbar navbar-expand-sm navbar-light flex-grow-1">
+                <div class="container-fluid d-flex justify-content-center align-items-center">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse"  id="navbarNav">
+                <div class="collapse navbar-collapse container-fluid d-flex justify-content-center align-items-center"  id="navbarNav">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="about.html">About us</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="shop.html">Shop By</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="preguntasF.html">Faq’s </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact Us</a>
-                    </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="about.html">About us</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="shop.html">Shop By</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="preguntasF.html">Faq’s </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="contact.html">Contact Us</a>
+                        </li>
                     </ul>
                 </div>
                 </div>
             </nav>
             <a class="navbar-brand" href="index.html">
-                <img src="PRUEBA/IMAGENES/LOGO-COLOR.png" alt="" id="nav_logo">
+                <img src="PRUEBA/IMAGENES/LOGO-COLOR2.png" alt="" id="nav_logo">
             </a>
         </div>
     </header>
-    <div class="hero">
-        <video autoplay loop muted pay>
+    <section class=" d-flex flex-column align-items-end justify-content-center h-100 m-0 hero">
+        <video autoplay loop muted pay class="w-100 h-100  position-absolute  ">
             <source src="PRUEBA/IMAGENES/video.mp4" type="video/mp4">
           </video>
-        <div class="hero_panel_color_uno">
+        <div class="hero_panel_color_uno position-absolute h-100">
         </div class>
-        <div class="hero_panel_color_dos"></div>
-        <div class="d-flex flex-column hero_top">
+        <div class="hero_panel_color_dos position-absolute h-100"></div>
+        <div class="w-100 d-flex flex-column justify-content-center align-items-end hero_top flex-grow-1">
             <h1 class="hero_top_titulo">
                 Lead the pack! <br> Run Run!
             </h1>
@@ -75,25 +85,31 @@
                 Get Started
             </button>
         </div>
-        <ul class="hero_redes_sociales d-flex flex-row">
-            <li class="hero_redes_sociales_item">
-                <i class="bi bi-facebook"></i>  
+        <ul class="hero_redes_sociales d-flex flex-row ">
+            <li class="hero_redes_sociales_item d-flex justify-content-center align-items-center">
+                <a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer">
+                    <i class="bi bi-facebook"></i> 
+                </a>
             </li>
-            <li class="hero_redes_sociales_item w-25">
-                <i class="bi bi-instagram"></i>
+            <li class="hero_redes_sociales_item d-flex justify-content-center align-items-center">
+                <a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer">
+                    <i class="bi bi-instagram"></i>
+                </a>
             </li>
-            <li class="hero_redes_sociales_item">
-                <i class="bi bi-youtube"></i>
+            <li class="hero_redes_sociales_item d-flex justify-content-center align-items-center">
+                <a href="https://www.youtube.com/" target="_blank" rel="noopener noreferrer">
+                    <i class="bi bi-youtube"></i>
+                </a>
             </li>
         </ul>
-    </div>
-    <section class="about_us">
-        <div class="about_us_contenido_contenedor">
+    </section>
+    <section class="about d-flex flex-column w-100 my-5">
+        <div class="about_contenido_contenedor w-100">
             <div class="d-flex flex-row">
-                <img src="PRUEBA/IMAGENES/Rectangle 5 (1).png" class="about_us_titulo_img" alt="about_us_titulo_img">
-                <h2 class="about_us_titulo">ABOUT US</h2>
+                <img src="PRUEBA/IMAGENES/Rectangle 5.png" class="about_titulo_img" alt="about_us_titulo_img">
+                <h2 class="about_titulo">ABOUT US</h2>
             </div>
-            <div class="about_us_informacion">
+            <div class="about_informacion container">
                 <article >
                     <h6>W</h6> 
                     <p>
@@ -120,27 +136,26 @@
                         audience.
                     </p>
                 </article>
-                <button class="about_us_boton mt-5">
+                <button class="about_boton mt-5">
                     Read  More
                 </button>
             </div>
         </div>
-        <img src="PRUEBA/IMAGENES/ABOUT (2).jpg" class="about_us_img" alt="">
-        <div class="about_us_caracteristicas d-flex flex-row justify-content-center align-items-center">
-            <ul class="d-flex flex-row">
+        <div class="about_caracteristicas py-2 container my-5 d-flex flex-row  justify-content-center align-items-center">
+            <ul class="d-flex flex-row flex-wrap justify-content-center align-items-center  mb-0">
                 <li class="d-flex flex-row justify-content-center align-items-center mx-2">
                     <div class="d-flex flex-row justify-content-center align-items-center mx-2">
                         <img src="PRUEBA/IMAGENES/icon--.png" alt="">
                     </div>
                     <p>Support</p>
                 </li>
-                <li class="d-flex flex-row justify-content-center align-items-center mx-2">
+                <li class="d-flex flex-row  justify-content-center align-items-center mx-2">
                     <div class="d-flex flex-row justify-content-center align-items-center mx-2">
                         <img src="PRUEBA/IMAGENES/icon-2-2.png" alt="">
                     </div>
                     <p>Good Lead</p>
                 </li>
-                <li class="d-flex flex-row justify-content-center align-items-center mx-2">
+                <li class="d-flex flex-row   justify-content-center align-items-center mx-2">
                     <div class="d-flex flex-row justify-content-center align-items-center mx-2">
                         <img src="PRUEBA/IMAGENES/icon-3-2.png" alt="">
                     </div>
@@ -149,28 +164,38 @@
             </ul>
         </div>
     </section>
-    <section class="Subscribe_to_Newsletter d-flex flex-column justify-content-center align-items-center my-5">
-        <h2>Subscribe to Newsletter</h2>
-        <form class="d-flex flex-row flex-wrap justify-content-center align-content-center ">
-            <input type="text" placeholder="" class="mx-1">
-            <div class="d-flex flex-row justify-content-center align-items-center">
-                <button class="mx-2 text-center ">Subscribe</button>
-            </div>
-        </form>
+    <section class="Subscribe_to_Newsletter Newsletter_about p-5 d-flex flex-column justify-content-center align-items-center my-5">
+        <div class="container">
+            <h2>Subscribe to Newsletter</h2>
+            <form class="d-flex flex-row flex-wrap justify-content-center align-content-center ">
+                <input type="text" placeholder="" class="mx-1 my-4">
+                <div class="d-flex flex-row justify-content-center align-items-center">
+                    <button class="mx-2 text-center ">Subscribe</button>
+                </div>
+            </form>
+        </div>
     </section>
     <footer class="d-flex flex-column mt-5">
-        <div class="d-flex flex-row  mt-5 footer_info flex-wrap pt-5">
+        <div class="d-flex flex-row  mt-5 footer_info flex-wrap pt-4">
             <div class="d-flex flex-column justify-content-center align-items-center">
-                <img src="PRUEBA/IMAGENES/LOGO-BLNCO.png" alt="" >
+                <a href="index.html" target="_blank" rel="noopener noreferrer">
+                    <img src="PRUEBA/IMAGENES/LOGO-BLNCO.png" alt="" >
+                </a>
                 <ul class="d-flex flex-row list-unstyled">
                     <li class="mx-2">
-                        <i class="bi bi-facebook"></i>
+                        <a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer">
+                            <i class="bi bi-facebook"></i>
+                        </a>
                     </li>
                     <li class="mx-2">
-                        <i class="bi bi-instagram"></i>
+                        <a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer">
+                            <i class="bi bi-instagram"></i>
+                        </a>
                     </li>
                     <li class="mx-2">
-                        <i class="bi bi-linkedin"></i>
+                        <a href="https://www.linkedin.com/" target="_blank" rel="noopener noreferrer">
+                            <i class="bi bi-linkedin"></i>
+                        </a>
                     </li>
                 </ul>
             </div>
@@ -178,15 +203,19 @@
                 <h6>Quick Links</h6>
                 <ul>
                     <li >
+                        <span class="punto"></span>
                         <a aria-current="page" href="about.html">About us</a>
                     </li>
                     <li >
+                        <span class="punto "></span>
                         <a  href="shop.html">Shop By</a>
                     </li>
                     <li class=>
+                        <span class="punto"></span>
                         <a  href="preguntasF.html">Faq’s </a>
                     </li>
                     <li >
+                        <span class="punto"></span>
                         <a  href="contact.html">Contact Us</a>
                     </li>
                 </ul>
@@ -195,26 +224,34 @@
                 <h6>More Information</h6>
                 <ul>
                     <li class="list-unstyled d-flex flex-row">
-                        <i class="bi bi-geo-alt-fill mx-2"></i>
-                        <p>
-                            5191 Eastside Hwy
-                            Stevensville, MT 59870
-                        </p> 
+                        <a href="https://web.whatsapp.com/" target="_blank" rel="noopener noreferrer">
+                            <i class="bi bi-geo-alt-fill mx-2"></i>
+                            <p>
+                                5191 Eastside Hwy
+                                Stevensville, MT 59870
+                            </p>
+                        </a>
                     </li>
                     <li class="list-unstyled d-flex flex-row">
-                        <i class="bi bi-envelope-fill mx-2"></i>
-                        <p>info@glamping.global</p>
+                        <a href="https://web.whatsapp.com/" target="_blank" rel="noopener noreferrer">
+                            <i class="bi bi-envelope-fill mx-2"></i>
+                            <p>info@glamping.global</p>
+                        </a>
                     </li>
                     <li class="list-unstyled d-flex flex-row2">
-                        <i class="bi bi-telephone-fill mx-2"></i>
-                        <p>Tel: 1-844-WEGLAMP</p> 
+                        <a href="https://web.whatsapp.com/" target="_blank" rel="noopener noreferrer">
+                            <i class="bi bi-telephone-fill mx-2"></i>
+                            <p>Tel: 1-844-WEGLAMP</p>
+                        </a> 
                     </li>
                 </ul>
             </div>
         </div>
         <div class="d-flex flex-row flex-wrap justify-content-between align-items-center footer_b p-4">
             <p>Copyright © 2022 All rights reserved | This Website Was Designed And Developed by</p>
-            <img src="PRUEBA/IMAGENES/logo Silvera Enterprises.png" alt=""">
+            <a href="https://josesilvera.com/" target="_blank" rel="noopener noreferrer">
+                <img src="PRUEBA/IMAGENES/logo Silvera Enterprises.png" alt="">
+            </a>
         </div>
     </footer>
     <script src="bootstrap-4.6.1/dist/js/bootstrap.min.js"></script>
