--- a/preguntasF.html
+++ b/preguntasF.html
@@ -11,63 +11,73 @@
     <link rel="stylesheet" href="./font/bootstrap-icons.css">
 </head>
 <body>
-    <header class="fixed-top header">
-        <div class="d-flex flex-row-reverse bd-highlight mb-3">
-            <div class="header_top d-flex flex-row">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0 d-flex flex-row">
-                    <li class="nav-item">
-                        <i class="bi bi-envelope-fill"></i>
+    <header class=" container-fluid fixed-top justify-content-between align-items-center header">
+        <div class="d-flex flex-row-reverse bd-highlight">
+            <div class="header_top d-flex flex-row flex-grow-1 justify-content-center align-items-center">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0 d-flex flex-row ">
+                    <li class="nav-item d-none d-lg-block">
+                        <a href="https://mail.google.com/" class="nav_redes_sociales" target="_blank" rel="noopener noreferrer">
+                            <i class="bi bi-envelope-fill header_top_nav"></i>
+                        </a>
+                    </li>
+                    <li class="nav-item d-none d-lg-block">
+                        <a href="https://www.google.com/maps/" class="nav_redes_sociales" target="_blank" rel="noopener noreferrer">
+                            <i class="bi bi-geo-alt-fill header_top_nav"></i>
+                        </a>
+                    </li>
+                    <li class="nav-item  d-none d-lg-block">
+                        <a href="https://web.whatsapp.com/" class="nav_redes_sociales" target="_blank" rel="noopener noreferrer">
+                            <i class="bi bi-telephone-fill header_top_nav"></i>
+                        </a>
                     </li>
                     <li class="nav-item">
-                        <i class="bi bi-geo-alt-fill"></i>
+                        <a href="#" class="nav_redes_sociales" target="_blank" rel="noopener noreferrer">
+                            <i class="bi bi-search header_top_nav"></i>
+                        </a>
                     </li>
                     <li class="nav-item">
-                        <i class="bi bi-telephone-fill"></i>
-                    </li>
-                    <li class="nav-item">
-                        <i class="bi bi-zoom-out"></i>
-                    </li>
-                    <li class="nav-item">
-                        <i class="bi bi-cart"></i>
+                        <a class="nav_redes_sociales" href="#" target="_blank" rel="noopener noreferrer">
+                            <i class="bi bi-cart header_top_nav"></i>
+                        </a>
                     </li>
                 </ul> 
             </div>
-            <nav class="navbar navbar-expand-lg navbar-light bg-lightp">
-                <div class="container-fluid">
+            <nav class="navbar navbar-expand-sm navbar-light flex-grow-1">
+                <div class="container-fluid d-flex justify-content-center align-items-center">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse"  id="navbarNav">
+                <div class="collapse navbar-collapse container-fluid d-flex justify-content-center align-items-center"  id="navbarNav">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="about.html">About us</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="shop.html">Shop By</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="preguntasF.html">Faq’s </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact Us</a>
-                    </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="about.html">About us</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="shop.html">Shop By</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="preguntasF.html">Faq’s </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="contact.html">Contact Us</a>
+                        </li>
                     </ul>
                 </div>
                 </div>
             </nav>
             <a class="navbar-brand" href="index.html">
-                <img src="PRUEBA/IMAGENES/LOGO-COLOR.png" alt="" id="nav_logo">
+                <img src="PRUEBA/IMAGENES/LOGO-COLOR2.png" alt="" id="nav_logo">
             </a>
         </div>
     </header>
-    <div class="hero">
-        <video autoplay loop muted pay>
+    <section class=" d-flex flex-column align-items-end justify-content-center h-100 m-0 hero">
+        <video autoplay loop muted pay class="w-100 h-100  position-absolute  ">
             <source src="PRUEBA/IMAGENES/video.mp4" type="video/mp4">
           </video>
-        <div class="hero_panel_color_uno">
+        <div class="hero_panel_color_uno position-absolute h-100">
         </div class>
-        <div class="hero_panel_color_dos"></div>
-        <div class="d-flex flex-column hero_top">
+        <div class="hero_panel_color_dos position-absolute h-100"></div>
+        <div class="w-100 d-flex flex-column justify-content-center align-items-end hero_top flex-grow-1">
             <h1 class="hero_top_titulo">
                 Lead the pack! <br> Run Run!
             </h1>
@@ -75,75 +85,81 @@
                 Get Started
             </button>
         </div>
-        <ul class="hero_redes_sociales d-flex flex-row">
-            <li class="hero_redes_sociales_item">
-                <i class="bi bi-facebook"></i>  
+        <ul class="hero_redes_sociales d-flex flex-row ">
+            <li class="hero_redes_sociales_item d-flex justify-content-center align-items-center">
+                <a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer">
+                    <i class="bi bi-facebook"></i> 
+                </a>
             </li>
-            <li class="hero_redes_sociales_item w-25">
-                <i class="bi bi-instagram"></i>
+            <li class="hero_redes_sociales_item d-flex justify-content-center align-items-center">
+                <a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer">
+                    <i class="bi bi-instagram"></i>
+                </a>
             </li>
-            <li class="hero_redes_sociales_item">
-                <i class="bi bi-youtube"></i>
+            <li class="hero_redes_sociales_item d-flex justify-content-center align-items-center">
+                <a href="https://www.youtube.com/" target="_blank" rel="noopener noreferrer">
+                    <i class="bi bi-youtube"></i>
+                </a>
             </li>
         </ul>
-    </div>
-</section>
-<section class="preguntas_frecuentes">
-    <div class="d-flex flex-row">
-        <img src="PRUEBA/IMAGENES/Rectangle 5.png" class="about_us_titulo_img" alt="titulo_img">
-        <h2 class="preguntas_frecuentes_titulo">Faq’s</h2>
-    </div>
-    <div class="accordion m-5 " id="accordionExample">
-        <div class="card">
-          <div class="card-header" id="headingOne">
-            <h2 class="mb-0">
-              <button class="btn btn-link btn-block text-left" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                Is it safe to use my credit card on the website? #1              </button>
-            </h2>
-          </div>
-      
-          <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
-            <div class="card-body">
-                yes. And the entire system is automated and secure.          </div>
+    </section>
+
+    <section class="preguntas_frecuentes">
+        <div class="d-flex flex-row">
+            <img src="PRUEBA/IMAGENES/Rectangle 5.png" class="about_us_titulo_img" alt="titulo_img">
+            <h2 class="preguntas_frecuentes_titulo">Faq’s</h2>
         </div>
-        <div class="card">
-          <div class="card-header" id="headingTwo">
-            <h2 class="mb-0">
-              <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                Can I exchange my items? #2
-              </button>
-            </h2>
-          </div>
-          <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
-            <div class="card-body">
-                Yes, as long as the clothing is in perfect condition and no more than 5 days have elapsed since the purchase, the condition of the clothing will be evaluated and you will be allowed to exchange it for something of the same or greater value (you will have to pay the difference) .            </div>
-          </div>
-        </div>
-        <div class="card">
-          <div class="card-header" id="headingThree">
-            <h2 class="mb-0">
-              <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                Home deliveries are made? #3
-              </button>
-            </h2>
-          </div>
-          <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
-            <div class="card-body">
-                Yes, if in a nearby place our shipping team will take care of it, if the place is very far away it is sent through an agency with which we are associated
+        <div class="accordion m-5 " id="accordionExample">
+            <div class="card">
+              <div class="card-header" id="headingOne">
+                <h2 class="mb-0">
+                  <button class="btn btn-link btn-block text-left" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                    Is it safe to use my credit card on the website? #1              </button>
+                </h2>
+              </div>
+          
+              <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
+                <div class="card-body">
+                    Yes, all your data is sent fully encrypted. And the entire system is automated and secure.          </div>
+            </div>
+            <div class="card">
+              <div class="card-header" id="headingTwo">
+                <h2 class="mb-0">
+                  <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                    Can I exchange my items? #2
+                  </button>
+                </h2>
+              </div>
+              <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
+                <div class="card-body">
+                    Yes, as long as the clothing is in perfect condition and no more than 5 days have elapsed since the purchase, the condition of the clothing will be evaluated and you will be allowed to exchange it for something of the same or greater value (you will have to pay the difference) .            </div>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-header" id="headingThree">
+                <h2 class="mb-0">
+                  <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                    Home deliveries are made? #3
+                  </button>
+                </h2>
+              </div>
+              <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
+                <div class="card-body">
+                    Yes, if in a nearby place our shipping team will take care of it, if the place is very far away it is sent through an agency with which we are associated
+                </div>
+              </div>
             </div>
           </div>
-        </div>
-      </div>
-</section>
-<section class="Subscribe_to_Newsletter d-flex flex-column justify-content-center align-items-center my-5">
-    <h2>Subscribe to Newsletter</h2>
-    <form class="d-flex flex-row flex-wrap justify-content-center align-content-center ">
-        <input type="text" placeholder="" class="mx-1">
-        <div class="d-flex flex-row justify-content-center align-items-center">
-            <button class="mx-2 text-center ">Subscribe</button>
-        </div>
-    </form>
-</section>
+    </section>
+    <section class="Subscribe_to_Newsletter Newsletter_preguntas_frecuentes  py-5 d-flex flex-column justify-content-center align-items-center my-5">
+        <h2>Subscribe to Newsletter</h2>
+        <form class="container d-flex flex-row flex-wrap justify-content-center align-content-center ">
+            <input type="text" placeholder="" class="mx-1">
+            <div class="d-flex flex-row justify-content-center align-items-center">
+                <button class="mx-2 text-center ">Subscribe</button>
+            </div>
+        </form>
+    </section>
 <footer class="d-flex flex-column mt-5">
     <div class="d-flex flex-row  mt-5 footer_info flex-wrap pt-5">
         <div class="d-flex flex-column justify-content-center align-items-center">
