--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="item d-flex ">
+                <div class="item d-flex justify-content-around py-1 ">
                     <div class="w-50 p-5  mt-5 testimonials_informacion">
                         <p class="d-inline" >
                             <h6 class="d-inline">T</h6>he products in this store are the best on the market with tremendous quality that help me feel fresh every time I play sports, I don't have to worry about the material or anything else, they are 100% original products and made of the best materials, I recommend them
@@ -289,7 +289,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="item d-flex ">
+                <div class="item d-flex justify-content-around py-1 ">
                     <div class="w-50 p-5  mt-5 testimonials_informacion">
                         <p class="d-inline" >
                             <h6 class="d-inline">T</h6>he products in this store are the best on the market with tremendous quality that help me feel fresh every time I play sports, I don't have to worry about the material or anything else, they are 100% original products and made of the best materials, I recommend them
