resposive de about terminado

--- a/about.html
+++ b/about.html
@@ -142,7 +142,7 @@
             </div>
         </div>
         <div class="about_caracteristicas py-2 container my-5 d-flex flex-row  justify-content-center align-items-center">
-            <ul class="d-flex flex-row flex-wrap justify-content-center align-items-center  mb-0">
+            <ul class="container d-flex flex-row flex-wrap justify-content-center align-items-center  mb-0">
                 <li class="d-flex flex-row justify-content-center align-items-center mx-2">
                     <div class="d-flex flex-row justify-content-center align-items-center mx-2">
                         <img src="PRUEBA/IMAGENES/icon--.png" alt="">
@@ -165,9 +165,9 @@
         </div>
     </section>
     <section class="Subscribe_to_Newsletter Newsletter_about p-5 d-flex flex-column justify-content-center align-items-center my-5">
-        <div class="">
+        <div class="container">
             <h2>Subscribe to Newsletter</h2>
-            <form class="container d-flex flex-row flex-wrap justify-content-center align-content-center ">
+            <form class=" d-flex flex-row flex-wrap justify-content-center align-content-center ">
                 <input type="text" placeholder="" class="mx-1 my-4">
                 <div class="d-flex flex-row justify-content-center align-items-center">
                     <button class="mx-2 text-center ">Subscribe</button>
