--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
             View More
         </button>
     </section>
-    <section class="testimonials d-flex flex-column pt-5">
+    <section class="testimonials container-fluid d-flex flex-column pt-5">
         <div class="testimonials_panel_color_uno">
         </div class>
         <div class="testimonials_panel_color_dos"></div>
@@ -260,8 +260,8 @@
             <h2 class="testimonials_titulo">Testimonials</h2>
         </div>
         <div class="w-100 d-flex justify-content-center align-items-center" >
-            <div class="container owl-2 owl-carousel owl-theme">
-                <div class="item d-flex justify-content-around py-1">
+            <div class="container-fluid owl-2 owl-carousel owl-theme">
+                <div class="container item d-flex flex justify-content-around py-1">
                     <div class="w-50 p-5  mt-5 testimonials_informacion">
                         <p class="d-inline" >
                             <h6 class="d-inline">T</h6>he products in this store are the best on the market with tremendous quality that help me feel fresh every time I play sports, I don't have to worry about the material or anything else, they are 100% original products and made of the best materials, I recommend them
@@ -308,7 +308,7 @@
     </section>
     <section class="Subscribe_to_Newsletter container d-flex flex-column justify-content-center align-items-center my-5 py-5">
         <h2>Subscribe to Newsletter</h2>
-        <form class="d-flex flex-row flex-wrap justify-content-center align-content-center ">
+        <form class="container d-flex flex-row flex-wrap justify-content-center align-content-center ">
             <input type="text" placeholder="" class="mx-1">
             <div class="d-flex flex-row justify-content-center align-items-center">
                 <button class="mx-2 text-center ">Subscribe</button>
